# eodh-training

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
api-client/: 1_ClientIntro.html  1_ClientIntro.ipynb  1_ClientIntro.md  1_Client_Introduction.ipynb  2_ResourceCatalog.html  2_ResourceCatalog.ipynb  2_Resource_Catalog.ipynb  3_WorkflowRunner.html  3_WorkflowRunner.ipynb  4_Services.html  4_Services.ipynb  planet-stac-proxy.html  planet-stac-proxy.ipynb  test2.html  test2.ipynb  test_vis.ipynb
apiclient/: test_vis.ipynb
cwl/: 1_Introduction_to_CWL.ipynb  2_Introduction_to_EO_AppPkg.ipynb  3_CWL_CommandLineTool_Examples.ipynb  4_CWL_Workflow_Examples.ipynb  resize-sentinel2ard.cwl
docs/: 2_Resource_Catalog.html
notebook/: test.html
platform/: 1_EODH_Introduction.ipynb  1_Intro.html  1_Intro.ipynb  2_Components.html  2_Components.ipynb  2_Example_User_Journey.ipynb  3_EODH_Web_Presence.ipynb  4_EODH_Notebooks.ipynb
plugin/: 1_Introduction.html  1_Introduction.md  1_introduction.html  1_introduction.ipynb  2_RunningWorkflows.html  2_RunningWorkflows.md  2_Runningworkflows.html  2_Runningworkflows.ipynb  3_OtherTools.html  3_OtherTools.ipynb
presentations/: videos.html  videos.ipynb
qgis-plugin/: 1_QGIS_Plugins.ipynb  2_EODH_plugin.ipynb  3_Plugin_Use_Cases.ipynb
science/: 03_NetcdfData.html  03_NetcdfData.ipynb  1_CodeSnippets.html  1_CodeSnippets.ipynb  1_DataCubes.html  1_Snippets.html  2_Commercial.html  2_Commercial.ipynb  2_Examples.html  2_Examples.ipynb  (+3 more)
(+76 files in other folders)
